# Yaruk-OS

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
appimage/: AppImageBuilder.yml  yaruk-apprun
flatpak/: org.yaruk.Yaruk.yml
models/vlm/: README.md  manifest.json
scripts/: vlm_split_lfs_parts.py
src/yaruk/: __init__.py  __main__.py  version.py
src/yaruk/analyzer/: classifier.py  multilang.py  preanalyzer.py
src/yaruk/api/: routes.py  security.py  server.py
src/yaruk/core/: cache.py  config.py  config_loader.py  exceptions.py  fallback.py  hardware.py  memory_guard.py  merger.py  orchestrator.py  progress.py  provider.py  registry.py  router.py  segmenter.py
src/yaruk/engines/: base_worker.py  env_manager.py  versions.py
src/yaruk/models/: __init__.py  canonical.py  enums.py  output_contract.py
src/yaruk/observability/: logging.py  metrics.py  tracing.py
src/yaruk/output/: asset_manager.py  renderer.py
src/yaruk/postprocess/: figure_captioner.py  pipeline.py  vlm_caption_refiner.py
src/yaruk/queue/: manager.py  models.py
src/yaruk/vlm/: __init__.py  manifest.py  (+4 more)
tests/: __init__.py  conftest.py
tests/fixtures/: README.md  thresholds.json
tests/test_analyzer/: test_multilang.py
tests/test_api/: test_pdf_magic.py  test_security.py
tests/test_core/: test_cache.py  test_classifier.py  test_dag.py  test_fallback.py  test_graph_exec.py  test_memory_guard.py  test_merger.py  test_orchestrator.py  test_registry.py  test_router.py  test_router_chains.py  test_segmenter.py  test_version.py
tests/test_engines/: test_base_worker.py  test_base_worker_security.py  test_docling_worker.py  test_ipc.py  test_marker_worker.py  test_markitdown_worker.py  test_mineru_worker.py  test_opendataloader_worker.py
tests/test_models/: test_canonical.py  test_output_contract.py
tests/test_output/: test_asset_manager.py  test_renderer.py
tests/test_postprocess/: test_pipeline.py
tests/test_queue/: test_manager.py
tests/test_vlm/: test_lfs_chunks.py
(+158 files in other folders)
