[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "yaruk-os"
version = "0.1.0"
description = "Yaruk-OS: Spatially-aware PDF orchestration — route technical documents to the right engines, merge to Canonical IR, export Markdown/JSON."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yaruk-OS Contributors" }]

dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlmodel>=0.0.22",
  "pymupdf>=1.24.9",
  "structlog>=24.4",
  "httpx>=0.27",
  "marker-pdf>=0.3.0",
  "docling>=2.5.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "pillow>=10.0.0",
  "pypdf>=6.10.2",
  "pdftext>=0.6.0",
  "magic-pdf>=1.3.12",
  "ultralytics>=8.4.37",
  "doclayout-yolo>=0.0.4",
  "rapid-table>=3.0.1",
  "struct-eqtable>=0.3.2",
  "markitdown>=0.1.5",
  "pdfplumber>=0.11.0",
  "opendataloader-pdf>=2.2.0",
  "num2words>=0.5.13",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]
tui = [
  "textual>=0.82.0",
]
gui = [
  "PySide6>=6.7.2",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "python-multipart>=0.0.6",
]

[project.scripts]
yaruk = "yaruk.__main__:main"

[project.entry-points."yaruk.providers"]
marker = "yaruk.engines.marker:MarkerProvider"
docling = "yaruk.engines.docling:DoclingProvider"
mineru = "yaruk.engines.mineru:MinerUProvider"
markitdown = "yaruk.engines.markitdown:MarkItDownProvider"
opendataloader = "yaruk.engines.opendataloader:OpenDataLoaderProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/yaruk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W", "I",
  "UP", "B", "SIM", "RUF",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["yaruk"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
warn_unused_configs = true
disallow_any_generics = true
warn_return_any = true
no_implicit_reexport = true
